--- a/index.html
+++ b/index.html
@@ -239,19 +239,17 @@
 
     <script>
         $(document).ready(function(){
-            $('.slider').slick({
-                infinite: true,
-                arrows:true,
-                slidesToShow: 4,
-                slidesToScroll: 1
-            });
-
+        $('.menu ul li').click(function(){
+            var target = $(this).data('target');
+            $('.item').hide();
+            $('#' + target).show();
+        });
         });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    
 
 
     
