--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
                             <span class="underline">PRENSA</span>
                         </li>
 
-                        <li class="nav-item py-2" data-target="content4">
+                        <li class="nav-item py-2" data-target="content5">
                             <span class="underline">DONÁ</span>
+                        </li>
+
+                        <li class="nav-item py-2" data-target="content6">
+                            <span class="underline">CONTACTO</span>
                         </li>
                     </ul>
                 </div>
@@ -168,7 +172,8 @@
                     </div>
 
                 </div>
-                <div id="content4" class="content">Contenido del Item 4</div>
+                <div id="content5" class="content">5</div>
+                <div id="content6" class="content">6</div>
             </div>
         </div>
     </div>
