--- a/prueba.html
+++ b/prueba.html
@@ -29,7 +29,7 @@
             bottom: 0;
             width: 100%;
             height: 2px;
-            background-color: #fc2f70;
+            background-color: #2f8ffc;
             transform-origin: center;
             transform: translate(-50%, 0) scaleX(0);
             transition: transform 0.3s ease-in-out;
@@ -54,7 +54,7 @@
 
     <div class="container-fluid">
         <div class="row" style="height: 100vh;">
-            <div class="col-md-3 bg-warning">
+            <div class="col-md-3 ">
                 <div class="p-5 border sticky-top">
                     <ul class="nav flex-column">
                         <li class="nav-item py-2" data-target="content1">
